# Pumpkin

./: .dockerignore  .gitignore  .gitmodules  .release-please-manifest.json  00.dzn  01.dzn  4queens.fzn  CHANGELOG.md  CITATION.bib  CITATION.cff  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  bitbucket-pipelines.yml  callgrind.out.47034  clippy.toml  deny.toml  fzn_inverse.mzn  generate-instance.py  hl2smt.py  hlproofchecker.py  out.txt  output.fzn  rcpsp.fzn  rcpsp.mzn  rcpsp.ozn  release-please-config.json  release-plz.toml  rustfmt.toml  test.fzn  todos.txt  tpp.fzn  tpp.ozn
drcp-debugger/: Cargo.toml
drcp-debugger/src/: main.rs
drcp-format/: CHANGELOG.md  Cargo.toml  README.md
drcp-format/src/: atomic.rs  encountered_literals.rs  format.rs  lib.rs  literal_code_provider.rs  literal_definitions.rs  steps.rs  writer.rs
drcp-format/src/reader/: error.rs  literal_atomic_map.rs  mod.rs  parser.rs
drcp-format/src/writer/: atomic.rs  literal_definitions.rs  mod.rs
experimentation/: .gitignore  README.md  move.sh  pyproject.toml
experimentation/benchmarks/: linear.toml  rcpsp.toml
experimentation/pipelines/: flatten.toml  flatten_linearise.toml  solve_cumulative.toml  solve_cumulative_conflict.toml  solve_linear.toml  solve_linear_conflict.toml
experimentation/sources/: pumpkin.toml
experimentation/src/constraint_solving/: __init__.py  benchmarks.py  config.py  experiments.py  manifests.py  pipelines.py  sources.py
fzn-rs/: CHANGELOG.md  Cargo.toml
fzn-rs-derive/: CHANGELOG.md  Cargo.toml
fzn-rs-derive/src/: annotation.rs  common.rs  constraint.rs  lib.rs
fzn-rs-derive/tests/: derive_flatzinc_annotation.rs  derive_flatzinc_constraint.rs  utils.rs
fzn-rs/src/: ast.rs  error.rs  from_ast.rs  lib.rs
fzn-rs/src/fzn/: mod.rs  tokens.rs
fzn-rs/src/parsers/: fzn.rs  mod.rs
fzn-rs/src/typed/: arrays.rs  constraint.rs  flatzinc_annotation.rs  flatzinc_constraint.rs  from_literal.rs  instance.rs  mod.rs
fzn_rs/: Cargo.toml
fzn_rs/src/: ast.rs  error.rs  from_argument.rs  from_ast.rs  lib.rs
fzn_rs/src/fzn/: mod.rs  tokens.rs
fzn_rs_derive/: Cargo.toml
fzn_rs_derive/src/: lib.rs
fzn_rs_derive/tests/: derive_flatzinc_annotation.rs  derive_flatzinc_constraint.rs  instance_constraints.rs  utils.rs
implementation/: Cargo.toml
implementation/src/: lib.rs
implementation/src/propagators/: all_different.rs  circuit.rs  cumulative.rs  linear_propagator.rs  mod.rs
implementation/src/resolvers/: all_decision_resolver.rs  mod.rs  no_learning_resolver.rs  resolution_resolver.rs
implementation/tests/: mod.rs
implementation/tests/propagators/: mod.rs  model.rs
pumpkin-checker/: CHANGELOG.md  Cargo.toml
pumpkin-checker/src/: conclusion.rs  deductions.rs  lib.rs  main.rs  math.rs  model.rs  state.rs  test_utils.rs
pumpkin-checker/src/inferences/: all_different.rs  arithmetic.rs  linear.rs  mod.rs  nogood.rs  time_table.rs
pumpkin-checker/tests/: invalid_test_cases.rs  valid_test_cases.rs
pumpkin-checker/tests/invalid_proofs/: market_split_u3_02.fzn  rcpsp00.drcp  rcpsp00.fzn  rcpsp02.drcp
pumpkin-checker/tests/proofs/: ghoulomb_3_5_11.drcp  ghoulomb_3_5_11.fzn  rcpsp03.drcp  rcpsp03.fzn  sudoku_p0.drcp  sudoku_p1.drcp  sudoku_p16.drcp  sudoku_p16.fzn  sudoku_p17.drcp  sudoku_p3.drcp
pumpkin-checker/tests/valid_proofs/: generate-proofs.sh  rcpsp00.drcp  rcpsp01.fzn  rcpsp02.drcp  rcpsp02.fzn  sudoku_p0.fzn  sudoku_p1.drcp  sudoku_p1.fzn  sudoku_p17.fzn  sudoku_p3.fzn
pumpkin-cli/: Cargo.toml  build.rs
pumpkin-cli/minizinc/: pumpkin.msc
pumpkin-cli/minizinc/lib/: redefinitions.mzn
pumpkin-cli/src/: checker.rs  file_format.rs  main.rs  result.rs
pumpkin-cli/src/flatzinc/: ast.rs  compiler.rs  constraints.rs  error.rs  instance.rs  minizinc_optimiser.rs  mod.rs  parser.rs
pumpkin-cli/src/maxsat/: mod.rs
pumpkin-cli/src/parsers/: dimacs.rs  mod.rs
pumpkin-cli/tests/: cnf_test.rs  mzn_constraint_test.rs  mzn_infeasible_test.rs  mzn_search_test.rs  wcnf_test.rs
pumpkin-crates/checking/: CHANGELOG.md  Cargo.toml
pumpkin-crates/conflict-resolvers/: CHANGELOG.md  Cargo.toml
pumpkin-crates/constraints/: CHANGELOG.md  Cargo.toml
pumpkin-crates/core/: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
pumpkin-crates/implementation/: Cargo.toml
pumpkin-crates/propagators/: CHANGELOG.md  Cargo.toml  clippy.toml
pumpkin-crates/pumpkin-solver-core/: Cargo.toml
pumpkin-lib/: Cargo.toml  command.txt  todos.txt
pumpkin-lib/examples/: bibd.rs  disjunctive_scheduling.rs  nqueens.rs
pumpkin-lib/src/: constraints.rs  lib.rs  pumpkin_asserts.rs  result.rs  variable_names.rs
pumpkin-macros/: Cargo.toml
pumpkin-macros/src/: lib.rs
pumpkin-proof-processor/: Cargo.toml
pumpkin-proof-processor/src/: deduction_propagator.rs  main.rs  model.rs  predicate_heap.rs  processor.rs  variables.rs
pumpkin-proof-processor/tests/: process_scaffolds.rs
pumpkin-py/: Cargo.toml  README.md  proof  pyproject.toml  test  test.drcp  test.lits
pumpkin-py/examples/: count.py  nqueens.py  testing.py
pumpkin-py/src/: constraints.rs  core.rs  lib.rs  model.rs  optimisation.rs  result.rs  solver.rs  variables.rs
pumpkin-py/tests/: test_assumptions.py  test_constraints.py  test_optimisation.py
pumpkin-solver/: CHANGELOG.md  Cargo.toml  build.rs  output.fzn  test_output.txt
pumpkin-solver-py/: Cargo.toml  README.md  pyproject.toml
pumpkin-solver-py/examples/: nqueens.py  optimisation.py
pumpkin-solver-py/src/: brancher.rs  lib.rs  model.rs  optimisation.rs  result.rs  variables.rs
pumpkin-solver-py/tests/: test_assumptions.py  test_boolean_integer_conversion.py  test_constraint_tags.py  test_constraints.py  test_optimisation.py
pumpkin-solver/examples/: bibd.rs  disjunctive_scheduling.rs  nqueens.rs
pumpkin-solver/src/: lib.rs  pumpkin_asserts.rs  variable_names.rs
pumpkin-solver/tests/: cnf_test.rs  core_extraction.rs  iteration_test.rs  mzn_constraint_test.rs  mzn_infeasible_test.rs  mzn_optimization_test.rs  mzn_search_test.rs  solver_test.rs  wcnf_test.rs
test-macros/: Cargo.toml
test-macros/src/: lib.rs
(+1681 files in other folders)
