[package]
name = "drcp-format"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Maarten Flippo"]
repository = "https://github.com/consol-lab/pumpkin"
description = "Parse and write DRCP and literal definition files."

[lints]
workspace = true

[dependencies]
nom = "7.1.3"
thiserror = "1.0.59"
