[package]
name = "drcp-format"
version = "0.1.0"
repository = "https://github.com/consol-lab/pumpkin"
description = "Parse and write DRCP and literal definition files."
license.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
nom = "7.1.3"
thiserror = "1.0.59"
