[package]
name = "drcp-format"
version = "0.2.1"
description = "Parse and write DRCP and literal definition files."
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
chumsky = "0.10.1"
thiserror = "2.0.12"
