[package]
name = "fzn-rs"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chumsky = { version = "0.10.1", optional = true }
thiserror = "2.0.12"
fzn-rs-derive = { path = "../fzn-rs-derive/", optional = true }

[features]
fzn-parser = ["dep:chumsky"]
derive = ["dep:fzn-rs-derive"]

[package.metadata.docs.rs]
features = ["derive"]

[lints]
workspace = true
