[package]
name = "fzn-rs"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chumsky = { version = "0.10.1" }
thiserror = "2.0.12"
fzn-rs-derive = { version = "0.1.0", path = "../fzn-rs-derive/" }

[lints]
workspace = true
