[package]
name = "fzn_rs"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chumsky = { version = "0.10.1", optional = true }
thiserror = "2.0.12"
fzn_rs_derive = { path = "../fzn_rs_derive/", optional = true }

[features]
fzn = ["dep:chumsky"]
derive = ["dep:fzn_rs_derive"]

[lints]
workspace = true
