[package]
name = "pumpkin-checker"
version = "0.3.0"
description = "A proof-checker for DRCP proofs generated for FlatZinc models."
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# These files are excluded because they make the crate extremely large, 
# preventing the crate from being published on crates.io.
exclude = [
    "tests/invalid_proofs",
    "tests/valid_proofs",
    "tests/valid_test_cases.rs",
    "tests/invalid_test_cases.rs",
]

[dependencies]
pumpkin-core = { version = "0.3.0", path = "../pumpkin-crates/core/" }
pumpkin-checking = { version = "0.3.0", path = "../pumpkin-crates/checking/" }
pumpkin-propagators = { version = "0.3.0", path = "../pumpkin-crates/propagators/" }
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
drcp-format = { version = "0.3.1", path = "../drcp-format" }
flate2 = "1.1.2"
fzn-rs = { version = "0.1.0", path = "../fzn-rs" }
thiserror = "2.0.16"
fnv = "1.0.7"
derive_more = { version = "2.1.1", features = ["from"] }

[dev-dependencies]
assert_cmd = "2.1.2"

[lints]
workspace = true
