[package]
name = "pumpkin-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pumpkin-lib = { path = "../pumpkin-lib" }
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4.18"
env_logger = "0.10.0"
thiserror = "1.0.40"
flatzinc = "0.3.20"
itertools = "0.12.1"
rand = { version = "0.8.5", features = [ "small_rng" ] }

[dev-dependencies]
wait-timeout = "0.2.0"
regex = "1.10.4"

[build-dependencies]
cc = "1.0.83"

[lints]
workspace = true

[features]
debug-checks = ["pumpkin-lib/debug-checks"]
