[package]
name = "pumpkin-lib"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0.39"
log = "0.4.17"
bitfield = "0.14.0"
enumset = "1.1.2"
fnv = "1.0.3"
rand = { version = "0.8.5", features = [ "small_rng" ] }
signal-hook = "0.3.17"
once_cell = "1.19.0"
drcp-format = { path = "../drcp-format" }

[dev-dependencies]
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.10.0"

[lints]
workspace = true

[features]
debug-checks = []
