[package]
name = "pumpkin-macros"
version = "0.1.0"
description = "Procedural macros used by Pumpkin."
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "pumpkin_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
itertools = "0.13.0"
proc-macro2 = "1.0.89"
quote = "1.0.37"
stringcase = "0.3.0"
syn = "2.0.85"

[lints]
workspace = true
