[package]
name = "pumpkin-py"
version = "0.1.0"
description = "The Python interface for the Pumpkin solver library."
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
name = "pumpkin_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.0"
pumpkin-solver = { path = "../pumpkin-solver" }
