[package]
name = "pumpkin-solver"
version = "0.1.4"
description = "The Pumpkin combinatorial optimisation solver library."
readme = "../README.md"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
thiserror = "1.0.39"
log = "0.4.17"
bitfield = "0.14.0"
enumset = "1.1.2"
fnv = "1.0.3"
rand = { version = "0.8.5", features = [ "small_rng", "alloc" ] }
signal-hook = "0.3.17"
once_cell = "1.19.0"
downcast-rs = "1.2.1"
drcp-format = { version = "0.2.0", path = "../drcp-format" }
convert_case = "0.6.0"
itertools = "0.13.0"
flatzinc = "0.3.21"
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.10.0"
bitfield-struct = "0.9.2"
num = "0.4.3"
enum-map = "2.7.3"

[dev-dependencies]
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.10.0"
regex = "1.11.0"
stringcase = "0.3.0"
wait-timeout = "0.2.0"
pumpkin-macros = { version = "0.1.0", path = "../pumpkin-macros"}

[lints]
workspace = true

[features]
debug-checks = []

[build-dependencies]
cc = "1.1.30"
