[package]
name = "pumpkin-solver"
version = "0.2.1"
description = "The Pumpkin combinatorial optimisation solver library."
readme = "../README.md"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.10.0"
fnv = "1.0.7"
flatzinc = "0.3.21"
log = "0.4.27"
pumpkin-core = { version = "0.2.1", path = "../pumpkin-crates/core/", features = ["clap"] }
signal-hook = "0.3.18"
thiserror = "2.0.12"
fzn-rs = { version = "0.1.0", path = "../fzn-rs/", features = ["derive", "fzn"] }
ariadne = "0.5.1"

[dev-dependencies]
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.10.0"
regex = "1.11.0"
stringcase = "0.3.0"
wait-timeout = "0.2.0"
pumpkin-macros = { version = "0.1.0", path = "../pumpkin-macros"}

[lints]
workspace = true

[features]
default = ["gzipped-proofs"]
debug-checks = ["pumpkin-core/debug-checks"]
gzipped-proofs = ["pumpkin-core/gzipped-proofs"]

[build-dependencies]
cc = "1.1.30"
