[package]
name = "pumpkin-checking"
description = "Types used by both pumpkin-core and pumpkin-checker"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dyn-clone = "1.0.20"
fnv = "1.0.7"
thiserror = "2.0.18"

[lints]
workspace = true
