[package]
name = "pumpkin-conflict-resolvers"
version = "0.3.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The conflict resolvers of the Pumpkin constraint programming solver."

[lints]
workspace = true

[dependencies]
pumpkin-core = { version = "0.3.0", path = "../core" }
itertools = "0.13.0"
log = "0.4.27"
