[package]
name = "pumpkin-conflict-resolvers"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The conflict resolvers of the Pumpkin constraint programming solver."

[lints]
workspace = true

[dependencies]
itertools = "0.15.0"
log = "0.4.27"
pumpkin-core = { version = "0.4.0", path = "../core" }
