[package]
name = "pumpkin-core"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The core of the Pumpkin constraint programming solver."

[lints]
workspace = true

[dependencies]
pumpkin-checking = { version = "0.4.0", path = "../checking" }
thiserror = "2.0.12"
log = "0.4.30"
bitfield = "0.19.4"
enumset = "1.1.13"
fnv = "1.0.7" # We require features which are on the `main` branch of the repository but are not on crates.io
rand = { version = "0.10.1", features = [ "alloc" ] }
once_cell = "1.19.0"
downcast-rs = "2.0.2"
drcp-format = { version = "0.3.1", path = "../../drcp-format" }
convert_case = "0.11.0"
itertools = "0.15.0"
bitfield-struct = "0.13.0"
num = "0.4.3"
enum-map = "3.1.0"
clap = { version = "4.5.40", optional = true, features=["derive"] }
indexmap = "2.10.0"
dyn-clone = "1.0.20"
flate2 = { version = "1.1.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1"
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
check-propagations = []
check-deductions = []
debug-checks = []
clap = ["dep:clap"]
