[package]
name = "pumpkin-propagators"
version = "0.3.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The propagators of the Pumpkin constraint programming solver."

[lints]
workspace = true

[dependencies]
pumpkin-core = { version = "0.3.0", path = "../core" }
pumpkin-checking = { version = "0.3.0", path = "../checking" }
enumset = "1.1.2"
bitfield-struct = "0.9.2"
convert_case = "0.8.0"
clap = { version = "4.5.40", optional = true, features=["derive"]}
log = "0.4.29"

[features]
clap = ["dep:clap", "pumpkin-core/clap"]
