[package]
name = "pumpkin-propagators"
version = "0.3.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The propagators of the Pumpkin constraint programming solver."

[lints]
workspace = true

[dependencies]
pumpkin-core = { version = "0.3.0", path = "../core" }
pumpkin-checking = { version = "0.3.0", path = "../checking" }
enumset = "1.1.11"
bitfield-struct = "0.13.0"
convert_case = "0.11.0"
clap = { version = "4.5.40", optional = true, features=["derive"]}

[features]
clap = ["dep:clap", "pumpkin-core/clap"]
