[package]
name = "pumpkin-solver-core"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = "1.0.39"
log = "0.4.17"
bitfield = "0.14.0"
enumset = "1.1.2"
fnv = "1.0.3"
rand = { version = "0.8.5", features = [ "small_rng", "alloc" ] }
once_cell = "1.19.0"
downcast-rs = "1.2.1"
drcp-format = { version = "0.2.1", path = "../../drcp-format" }
convert_case = "0.6.0"
itertools = "0.13.0"
bitfield-struct = "0.9.2"
num = "0.4.3"
enum-map = "2.7.3"

[features]
debug-checks = []
